--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>WAVE</title>
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>WAVE</header>
