--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="top">
-  <header>WAVE</header>
+  <header><a href="index.html">WAVE</a></header>
 
   <nav>
     <ul>
